--- a/css/responsive.css
+++ b/css/responsive.css
@@ -284,6 +284,15 @@
 /* 928 */
 
 @media (max-width: 58em) {
+  .lojaonline {
+    background-color: #f2f2f2;
+    padding-bottom: 96px;
+    background-image: url(../img/loja/efeitos/teste1.png);
+    background-size: cover;
+    width: 100%;
+    overflow: hidden;
+    transition: none;
+  }
   .caixa {
     flex-direction: column;
   }
@@ -835,10 +844,10 @@
     height: 500px;
   }
   .openm .sites {
-    margin-top: -35px;
+    margin-top: -5px;
   }
   .search .sites {
-    margin-top: 10px;
+    margin-top: 42px;
   }
   .openm .sites {
     height: calc(100vh - 140px);
