--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,10 @@ header {
   transition: border 0.3s;
 }
 .grad {
-  background-image: url(../img/bannersite.png);
+  background-image: url(../img/bannerpattern.jpg);
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: 130%;
+  background-repeat: repeat;
+  background-size: 10%;
 }
 .container {
   display: flex;
@@ -62,6 +62,7 @@ header {
 }
 .redessociais {
   align-self: center;
+  cursor: pointer;
 }
 
 .patrocinio {
@@ -344,9 +345,9 @@ a .iconeentrar {
   display: block;
   height: 0;
   transition: all 0.2s;
-  background-image: url(../img/bannersite2.png);
+  background-image: url(../img/searchbar.jpg);
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat-x;
 }
 .search .searchbar {
   height: 54px;
@@ -986,12 +987,12 @@ tbody:before {
 }
 
 .lojaonline.tche {
-  background-image: url(../img/loja/efeitos/funtche.jpg);
+  background-image: url(../img/loja/efeitos/funtche.webp);
   background-position: center;
   box-shadow: inset 0 0 15px 0 #c9e9ea;
 }
 .lojaonline.adry {
-  background-image: url(../img/loja/efeitos/funadry.jpg);
+  background-image: url(../img/loja/efeitos/funadry.webp);
   background-position: center;
   box-shadow: inset 0 0 15px 0 #f2f2f2;
 }
@@ -1214,7 +1215,7 @@ iframe {
 /* ////////////////////////////////////////// */
 .apoio {
   background-color: #fff;
-  background-image: url(../img/fundo\ patrocinadores2.png);
+  background-image: url(../img/fundopatrocinadores.jpg);
   background-repeat: revert;
   background-position: center;
   padding: 96px 0 192px;
